commit login register code and interceptor code

--- a/src/app/components/registerlogin/registerlogin/registerlogin.component.html
+++ b/src/app/components/registerlogin/registerlogin/registerlogin.component.html
@@ -1,4 +1,12 @@
 <section class="background-radial-gradient overflow-hidden">
+  <ngx-spinner
+    bdColor="rgba(0, 0, 0, 0.8)"
+    size="medium"
+    color="#fff"
+    type="ball-atom"
+    [fullScreen]="true"
+    ><p style="color: white">Loading...</p></ngx-spinner
+  >
   <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
     <div class="row gx-lg-5 align-items-center">
       <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
@@ -24,27 +32,29 @@
       <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
         <div class="card bg-glass">
           <div class="card-body px-4 py-5 px-md-5">
-            <form [formGroup]="loginregisterForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="registerForm" *ngIf="isregister">
+              <h3 id="register" class="headerrl">Register Form</h3>
               <div class="form-outline mb-4">
-                <label class="form-label" for="form3Example3"
-                  >Email address</label
-                >
+                <label class="form-label" for="email">Email address</label>
                 <input
                   type="email"
-                  id="form3Example3"
+                  id="email"
                   class="form-control"
-                  formControlName="email"
+                  formControlName="userEmail"
                 />
-                <p *ngIf="email!.touched && email!.invalid" class="text-danger">
+                <p
+                  *ngIf="userEmail!.touched && userEmail!.invalid"
+                  class="text-danger"
+                >
                   Email Address required.
                 </p>
               </div>
 
               <div class="form-outline mb-4">
-                <label class="form-label" for="form3Example3">Phone</label>
+                <label class="form-label" for="phone">Phone</label>
                 <input
                   type="text"
-                  id="form3Example3"
+                  id="phone"
                   class="form-control"
                   formControlName="phone"
                 />
@@ -54,29 +64,103 @@
               </div>
 
               <div class="form-outline mb-4">
-                <label class="form-label" for="form3Example4">Password</label>
+                <label class="form-label" for="registeruserPassword"
+                  >Password</label
+                >
                 <input
                   type="password"
-                  id="form3Example4"
+                  id="registeruserPassword"
                   class="form-control"
-                  formControlName="password"
+                  formControlName="registeruserPassword"
                 />
                 <p
-                  *ngIf="password!.touched && password!.invalid"
+                  *ngIf="
+                    registeruserPassword!.touched &&
+                    registeruserPassword!.invalid
+                  "
                   class="text-danger"
                 >
                   Password required.
                 </p>
               </div>
               <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-danger btn-lg btn-block">
-                  Sign-up
+                <button
+                  type="submit"
+                  class="btn btn-danger btn-lg btn-block"
+                  (click)="signUp()"
+                >
+                  Register
                 </button>
-                <button type="submit" class="btn btn-primary btn-lg btn-block">
-                  Sign-in
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-lg btn-block"
+                  (click)="signIn()"
+                >
+                  Login
                 </button>
               </div>
             </form>
+            <form [formGroup]="loginForm" *ngIf="isLogin">
+              <h3 id="register" class="headerrl">Login Form</h3>
+              <div class="form-outline mb-4">
+                <label class="form-label" for="userName">Username</label>
+                <input
+                  type="text"
+                  id="userName"
+                  class="form-control"
+                  formControlName="userName"
+                />
+                <p
+                  *ngIf="userName!.touched && userName!.invalid"
+                  class="text-danger"
+                >
+                  Username required.
+                </p>
+              </div>
+
+              <div class="form-outline mb-4">
+                <label class="form-label" for="loginuserPassword"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  id="loginuserPassword"
+                  class="form-control"
+                  formControlName="loginuserPassword"
+                />
+                <p
+                  *ngIf="
+                    loginuserPassword!.touched && loginuserPassword!.invalid
+                  "
+                  class="text-danger"
+                >
+                  Password required.
+                </p>
+              </div>
+              <div class="d-grid gap-2">
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-lg btn-block"
+                  (click)="signUp()"
+                >
+                  Register
+                </button>
+                <button
+                  type="submit"
+                  class="btn btn-danger btn-lg btn-block"
+                  (click)="signIn()"
+                >
+                  Login
+                </button>
+              </div>
+            </form>
+            <div
+              class="alert alert-success mt-2"
+              role="alert"
+              *ngIf="isMessage"
+            >
+              {{ message }}
+            </div>
           </div>
         </div>
       </div>
