--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -25,12 +25,12 @@
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
       <button type="button" class="btn btn-primary position-relative">
-        Sayan Pramanick
+        {{ userName }}
         <span
           class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
           style="font-size: 0.75rem; padding: 0.5em 0.6em"
         >
-          4
+          {{ taskCount }}
         </span>
       </button>
     </h5>
@@ -43,7 +43,7 @@
   </div>
   <div class="text-center">
     <img
-      src="https://scontent-ccu1-1.xx.fbcdn.net/v/t39.30808-6/317265650_660118115766023_2534447728583088896_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=FBqQAwF4gtsQ7kNvgGGwklN&_nc_ht=scontent-ccu1-1.xx&oh=00_AYAyrmIdic4pxL20e8jNtFIX5KvVbcoRma5Kc9FSnnnmQA&oe=66D5EA25"
+      src="https://getdrawings.com/free-icon/user-icon-png-52.png"
       class="rounded"
       style="width: 7rem"
     />
@@ -64,6 +64,14 @@
         </a>
       </li>
     </ul>
+    <button
+      type="button"
+      class="btn btn-danger btn-lg btn-block"
+      style="width: -webkit-fill-available"
+      (click)="logout()"
+    >
+      Logout
+    </button>
   </div>
 </div>
 
