--- a/src/app/components/task/addeditviewtask/addeditviewtask.component.html
+++ b/src/app/components/task/addeditviewtask/addeditviewtask.component.html
@@ -70,6 +70,7 @@
         class="form-control"
         formControlName="description"
         autocomplete="off"
+        (keydown)="onKeyDown($event)"
         rows="4"
         placeholder="Enter description"
         [ngClass]="{ 'disabled-input': isViewMode }"
@@ -162,6 +163,65 @@
           <label class="form-check-label" for="isCompleted"
             >Do you want to complete task ?</label
           >
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="form-check">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="isSubTask"
+            (change)="isVisbleSubtask($event)"
+            [checked]="isVisiblesub_taskflag"
+            [ngClass]="{ 'disabled-input': isViewMode }"
+          />
+          <label class="form-check-label" for="isSubTask"
+            >Do you want to add sub-task ?</label
+          >
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="isVisiblesub_taskflag">
+      <div class="mt-4">
+        <div class="d-flex justify-content-end">
+          <button
+            type="button"
+            class="btn btn-outline-dark btn-custom"
+            style="padding: 0.5rem 1rem; font-size: 1rem"
+            (click)="addRow()"
+          >
+            <i class="fa-brands fa-git-alt"></i>
+            Add Subtask
+          </button>
+        </div>
+      </div>
+
+      <div style="margin-top: 1rem" formArrayName="subtasks">
+        <div
+          *ngFor="let subtask of subtasks.controls; let i = index"
+          [formGroupName]="i"
+          class="row1-sub-container"
+        >
+          <div
+            style="
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              margin-top: 1.5rem;
+            "
+          >
+            <input
+              type="text"
+              id="subtask"
+              class="form-control"
+              autocomplete="off"
+              formControlName="subtask"
+              placeholder="Enter subtask"
+              [ngClass]="{ 'disabled-input': isViewMode }"
+            />
+          </div>
         </div>
       </div>
     </div>
