--- a/src/app/components/task/tasklist/tasklist.component.html
+++ b/src/app/components/task/tasklist/tasklist.component.html
@@ -10,12 +10,12 @@
 
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h6
-      class="bg-secondary-subtle p-3 border-start border-primary border-5 rounded-start rounded-end-4 d-flex align-items-center"
-    >
-      <i class="fa-solid fa-list-check me-2"></i>
-      Task Details
-    </h6>
+    <div class="card border-light rounded-4">
+      <div class="card-body d-flex align-items-center bg-body-tertiary p-3">
+        <i class="fa-regular fa-paste me-3 text-secondary-emphasis"></i>
+        <h5 class="mb-0">Task Details</h5>
+      </div>
+    </div>
 
     <button
       class="btn btn-md btn-outline-success d-flex align-items-center"
@@ -25,13 +25,59 @@
       Add Task
     </button>
   </div>
-  <div class="d-flex justify-content-between align-items-center m-auto mb-4">
-    <div class="priority-block bg-danger text-white me-2">High</div>
-    <div class="priority-block bg-warning text-dark me-2">Medium</div>
-    <div class="priority-block bg-primary text-white me-2">Low</div>
-    <div class="priority-block bg-success text-white">Done</div>
+
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-3 mb-4">
+        <div class="card bg-danger text-white">
+          <div class="card-body">
+            <h4 class="card-title">{{ highpriority }}</h4>
+            <p class="card-text">High</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card bg-warning text-dark">
+          <div class="card-body">
+            <h4 class="card-title">{{ mediumpriority }}</h4>
+            <p class="card-text">Medium</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card bg-primary text-white">
+          <div class="card-body">
+            <h4 class="card-title">{{ lowpriority }}</h4>
+            <p class="card-text">Low</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card bg-success text-white">
+          <div class="card-body">
+            <h4 class="card-title">{{ donepriority }}</h4>
+            <p class="card-text">Done</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="input-group mb-4">
+
+  <div class="chart-container">
+    <highcharts-chart
+      [Highcharts]="Highcharts"
+      [options]="chartOptions"
+      style="width: 48%; height: 400px; display: block"
+    ></highcharts-chart>
+
+    <highcharts-chart
+      [Highcharts]="Highcharts"
+      [options]="barchartOptions"
+      style="width: 48%; height: 400px; display: block"
+    ></highcharts-chart>
+  </div>
+
+  <div class="input-group mb-4 mt-2">
     <span
       class="input-group-text bg-secondary-subtle border-3"
       id="search-icon"
@@ -62,26 +108,34 @@
           opacity: item.isDeleted ? '0.6' : '1',
           'pointer-events': item.isDeleted ? 'none' : 'auto'
         }"
-        [ngClass]="getCardClass(item.priority, item.isDeleted)"
+        [ngClass]="getCardClass(item.priority, item.isDeleted, item.taskStatus)"
       >
         <div class="card-body">
-          <h5 class="card-title mb-3">{{ item.subject }}</h5>
-          <p class="card-text mb-2">{{ item.description }}</p>
           <p
             class="card-text mb-2 text-center text-white-100 text-bg-secondary rounded-4"
             *ngIf="item.isDeleted"
           >
             Task Deleted
           </p>
-          <p
-            class="card-text mb-2 text-center text-white-100 text-bg-success rounded-4"
-            *ngIf="item.isCompleted"
-          >
-            Task Completed
-          </p>
+
+          <h5 class="card-title mb-3">{{ item.subject }}</h5>
           <p class="card-text text-muted">
             <span class="fw-bold">Start Date:</span>
             {{ item.startDate | date : "fullDate" }}
+          </p>
+          <p class="card-text text-muted">
+            <span class="fw-bold">End Date:</span>
+            {{ item.endDate | date : "fullDate" }}
+          </p>
+          <p class="card-text text-muted">
+            <span class="fw-bold">Status:</span>
+            {{ item.taskStatus | sentenceCase }}
+            <span
+              *ngIf="item.taskStatus === 'completed'"
+              class="status-indicator"
+            >
+              <span class="dot"></span>
+            </span>
           </p>
         </div>
         <div class="card-footer d-flex justify-content-between">
@@ -110,6 +164,7 @@
       </div>
     </div>
   </div>
+
   <div *ngIf="filteredItems.length === 0" class="text-center">
     <p>No tasks available.</p>
   </div>
